src/objects/Desk_Case_Email__c.object
<CustomObject>
    <fields>
        <fullName>bcc__c</fullName>
        <label>bcc</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <label>body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cc__c</fullName>
        <label>cc</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>created_at__c</fullName>
        <label>created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>from__c</fullName>
        <label>from</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>interaction_direction__c</fullName>
        <label>interaction_direction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interaction_status__c</fullName>
        <label>interaction status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reply_to__c</fullName>
        <label>reply to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sent_at__c</fullName>
        <label>sent at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ticket_id__c</fullName>
        <label>ticket_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>to__c</fullName>
        <label>to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>updated_at__c</fullName>
        <label>updated at</label>
        <type>DateTime</type>
    </fields>
    <label>Desk Case Email</label>
    <nameField>
        <label>Desk Case Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Case Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>